      check_header() and check_trailer() ones.
    - Use “GnuPG” instead of “gpg” in error messages to refer to the software
      in Dpkg::Source::Package.
    - Handle undef versions in Dpkg::Changelog from empty versions in
      changelog entry header lines.
    - Allow detached upstream orig tarball signatures when extracting
      version 1.0 non-native source packages.
  * Build system:
    - Fix building development documentation.
    - Remove unused UA_LIBS variable.
    - Split libps and libkvm detection into their own macros and variables.
    - Make it possible to build without system libmd.
    - Add a configuration summary to configure output.
    - Make git log invocation immune to local configuration.
    - Do not require passing the perl interpreter to run-script.
    - Quote dirname argument in run-script, to handle spaces in pathname.
      Reported by Carsten Hey <carsten@debian.org>.
    - Use a single po4a opt argument instead of the same per language.
  * Packaging:
    - Enable all hardening flags, starting with gcc-5 there is no performance
      loss anymore when enabling PIE on i386.
  * Test suite:
    - Add a unit test to compile perl code with warnings.
    - Add a unit test for the trigger deferred parser.
  * Documentation:
    - Say value instead of option in deb-control(5).
    - Mark debian changelog format in bold in dpkg-parsechangelog(1).
    - Add references to man pages describing file formats.
    - Document missing Install-Size, Built-For-Profiles and Build-Profiles
      fields in man pages.
    - Add new dsc(5), deb-changelog(5) and deb-changes(5) man pages.
    - Remove Debian specific policy references.
    - Remove superfluous SEE ALSO references from dpkg-source(1).
    - Fix --remove and --purge summary formatting in dpkg(1).
    - Move --audit description just after --verify in dpkg(1).
    - Mark Maintainer field as bold in deb-src-control(5).
    - Fix reference to --record-avail instead of nonexistent --avail.