@@ -282,6 +282,9 @@ deployment of those formats within Debian.
 A source package in this format consists either of a \fB.orig.tar.gz\fP
 associated to a \fB.diff.gz\fP or a single \fB.tar.gz\fP (in that case
 the package is said to be \fInative\fP).
+Optionally the original tarball might be accompanied by a detached
+upstream signature \fB.orig.tar.gz.asc\fP, extraction and building
+supported since dpkg 1.18.5.
 
 .B Extracting
 
@@ -456,6 +459,11 @@ an original tarball (\fB.orig.tar.\fP\fIext\fP where \fIext\fP can be
 tarballs (\fB.orig\-\fP\fIcomponent\fP\fB.tar.\fP\fIext\fP).
 \fIcomponent\fP can only contain alphanumeric characters and hyphens
 (\(oq\-\(cq).
+Optionally each original tarball can be accompanied by a detached
+upstream signature (\fB.orig.tar.\fP\fIext\fP\fB.asc\fP and
+\fB.orig\-\fP\fIcomponent\fP\fB.tar.\fP\fIext\fP\fB.asc\fP), extraction
+supported since dpkg 1.17.20, building supported since dpkg 1.18.5.
+
 .PP
 .B Extracting
 .PP
