@@ -114,6 +114,8 @@ dpkg (1.18.5) UNRELEASED; urgency=medium
       changelog entry header lines.
     - Allow detached upstream orig tarball signatures when extracting
       version 1.0 non-native source packages.
+    - Include upstream orig tarball signatures in source packages.
+      See #759478.
   * Build system:
     - Fix building development documentation.
     - Remove unused UA_LIBS variable.
